--- a/index.html
+++ b/index.html
@@ -6,54 +6,68 @@
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
-      background-color: #f4f4f9;
+      background: linear-gradient(to bottom, #fce4ec, #f3e5f5);
       margin: 0;
       padding: 0;
       color: #333;
     }
     .container {
-      max-width: 600px;
-      margin: 30px auto;
-      background: #fff;
-      padding: 20px;
-      border-radius: 15px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+      max-width: 700px;
+      margin: 40px auto;
+      background: #ffffffdd;
+      padding: 30px;
+      border-radius: 20px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.1);
+      position: relative;
     }
     h1 {
-      color: #2a2e45;
+      color: #4a148c;
       text-align: center;
+      margin-bottom: 20px;
     }
     .meme {
       text-align: center;
-      margin: 20px 0;
+      margin: 25px 0;
     }
     .meme img {
       max-width: 100%;
-      border-radius: 10px;
+      border-radius: 12px;
     }
     .caption {
       font-weight: bold;
       margin-top: 10px;
       font-size: 1.1em;
+      text-align: center;
     }
     .message {
       white-space: pre-line;
-      margin-top: 20px;
       font-size: 1em;
+      margin-top: 25px;
+      line-height: 1.6;
+    }
+    .decorations::before, .decorations::after {
+      content: '✨💜🎀';
+      font-size: 1.5em;
+      position: absolute;
+      top: 10px;
+    }
+    .decorations::after {
+      right: 15px;
+    }
+    .decorations::before {
+      left: 15px;
     }
   </style>
 </head>
 <body>
-  <div class="container">
+  <div class="container decorations">
     <h1>Kamu nambah umur, tapi masih sama lucunya</h1>
     <div class="meme">
-      <img src="kucing-meme.jpg" alt="Meme Kucing Lucu" />
+      <img src="https://i.pinimg.com/564x/6c/ae/f8/6caef8c641541b6b8c4451214f4c6793.jpg" alt="Meme Kucing Lucu" />
       <div class="caption">Stop lucu atau aku culik kamu!!</div>
     </div>
     <div class="message">
-Utututuuu level up dayy nggaa😋, aku ga lalii kok, mungkinnn iki sedikitt agakk alay dikit tp gpp lh, yoo sepurane mungkin cuma ikii sg iso tak gawe tapi setidake aku effort lo yo iki, umume ae cah TKJ ddi tk gaweo web coding an, yo mungkin aku gak iso ky cah cah ngonokuii sg ketoe penak nk petukan ngono, sebenere aku yo iso ae ky ngono toh yo aku ws eroh omahmu, tapi aku cahe drg iso ngonoki gk siap aku:(yo intinee, apapun ikuu tapii nk tak sampeno yo pasaku kedawan aku eroh awmu gk seneng dowo2😒, ddi ttp doa terbaik gawe awmuu doa apapun iku hanya allah yang tauu, pokoe nk awmu seneng aku yo seneng🙂 maaf nk aku urung isooo dadi op nk mo bayangnoo, drg iso ddi panggon crito sg penak gawe awmu, saiki mungkin awmu lagek bar kerjaa mesti kesel, semangat terus yooo apapun ikuu semoga op nk ws mo perjuangno ikuu dadi titik pencapaian terbaikmu somben, nk somben ws dadi versi terbaik masing2 dan aku ws iso ndelok awmu dengan pencapaian terbaikmu ikuu aku yo bakal dadi orang kesekian sg melok seneng ambe pencapaianmu iku gak perlu dipaksa gak perlu dipikir sg penting dilakoni, awmu gk oleh ngrosoo awmu kalah dari apapun awmu isih iso maju dengan usahamu dadii ojo ngawasi mburi tp ngawasi ngarep terus awmu yo awmu gak iso dipadakno ambe wong liyoo.
-
-Intinee semangatt teruss yoo proud of youu!!<3
+Utututuuu level up dayy nggaa, aku ga lalii kok, mungkinnn iki sedikitt agakk alay dikit tp gpp lh, yoo sepurane mungkin cuma ikii sg iso tak gawe tapi setidake aku effort lo yo iki, umume ae cah TKJ ddi tk gaweo web coding an, yo mungkin aku gak iso ky cah cah ngonokuii sg ketoe penak nk petukan ngono, sebenere aku yo iso ae ky ngono toh yo aku ws eroh omahmu, tapi aku cahe drg iso ngonoki gk siap aku:(yo intinee, apapun ikuu tapii nk tak sampeno yo pasaku kedawan aku eroh awmu gk seneng dowo2😒, ddi ttp doa terbaik gawe awmuu doa apapun iku hanya allah yang tauu, pokoe nk awmu seneng aku yo seneng🙂 maaf nk aku urung isooo dadi op nk mo bayangnoo, drg iso ddi panggon crito sg penak gawe awmu, saiki mungkin awmu lagek bar kerjaa mesti kesel, semangat terus yooo apapun ikuu semoga op nk ws mo perjuangno ikuu dadi titik pencapaian terbaikmu somben, nk somben ws dadi versi terbaik masing2 dan aku ws iso ndelok awmu dengan pencapaian terbaikmu ikuu aku yo bakal dadi orang kesekian sg melok seneng ambe pencapaianmu iku gak perlu dipaksa gak perlu dipikir sg penting dilakoni, awmu gk oleh ngrosoo awmu kalah dari apapun awmu isih iso maju dengan usahamu dadii ojo ngawasi mburi tp ngawasi ngarep terus awmu yo awmu gak iso dipadakno ambe wong liyoo.Intinee semangatt teruss yoo proud of youu!!
 
 Terimakasii untuk apapunn, gk usah ngeroso insecureee teruss yoo gk usah mikir aneh2 tentang aku nehh, awmu ki ws menang cah awmu ki gk olehh bersaing ambe siapapunn nk awmu mikir aku cahe gampang seneng bocahh iyo tak akoni tp bocah e yo awmu, wong awmu meneng ae aku yo ws kecintaan ikiii opo neh awmu polah, dadi aku ki smpe ra sempat menikmati keindahan lianee mergoo aku gk isoo ki ngelirik lianee ddi gk ush mikir aneh2 nehh yoo, awmu ki gk ngarah kalah dalam hal apapun bagikuu nk ono sg pe bersaing mbe awmu plg lagek dep2an cah kui lo ws kalah pol. Gawe kesehatanmu yo dijogo nk sekirane udan ki metu gawe hoodie mbe jas udan mben ra hanyeben muleh e ngko gawe nk anget2 mben ga gering, nk sekirane kesel rausah dipekso. Luv uu!! </div>
 
