--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Spesial Buat Kamu!</title>
+  <title>Special for you!</title>
   <style>
     body {
       margin: 0;
@@ -17,7 +17,7 @@
       height: 100vh;
     }
 
-    .love {
+    .ballon {
       position: absolute;
       width: 20px;
       height: 20px;
@@ -27,21 +27,21 @@
       opacity: 0.6;
     }
 
-    .love::before, .love::after {
+    .ballon::before, .ballon::after {
       content: "";
       position: absolute;
       width: 20px;
       height: 20px;
-      background: red;
+      background: purple;
       border-radius: 50%;
     }
 
-    .love::before {
+    .ballon::before {
       top: -10px;
       left: 0;
     }
 
-    .love::after {
+    .ballon::after {
       left: -10px;
       top: 0;
     }
@@ -67,7 +67,7 @@
       border: none;
       border-radius: 10px;
       background-color: #ff85b3;
-      color: white;
+      color: cream;
       cursor: pointer;
       transition: 0.3s ease;
       z-index: 2;
@@ -131,40 +131,40 @@
 <body>
 
 <!-- Heart decorations -->
-<div class="love" style="left:10%; animation-delay: 0s;"></div>
-<div class="love" style="left:30%; animation-delay: 2s;"></div>
-<div class="love" style="left:50%; animation-delay: 1s;"></div>
-<div class="love" style="left:70%; animation-delay: 3s;"></div>
-<div class="love" style="left:90%; animation-delay: 4s;"></div>
+<div class="ballon" style="left:10%; animation-delay: 0s;"></div>
+<div class="ballon" style="left:30%; animation-delay: 2s;"></div>
+<div class="ballon" style="left:50%; animation-delay: 1s;"></div>
+<div class="ballon" style="left:70%; animation-delay: 3s;"></div>
+<div class="ballon" style="left:90%; animation-delay: 4s;"></div>
 
 <div class="container">
-  <button onclick="showNextPopup()">Klik di sini dulu yaa!</button>
+  <button onclick="showNextPopup()">Click the Button!</button>
 </div>
 
 <div class="overlay" id="overlay"></div>
 
 <!-- POPUP 1 -->
 <div class="popup" id="popup1">
-  <h2>🎉 Ulang Tahunmu Hari Ini!</h2>
-  <img src="https://i.ibb.co/GsStJrT/kucing-meme.jpg" alt="Meme Kucing Lucu">
-  <p>Stop lucu atau aku culik kamu!!</p>
-  <button class="close-btn" onclick="nextPopup(1)">Lanjut</button>
+  <h2>19 Level Up!!</h2>
+  <img src="https://pin.it/o9sNLzWFK" alt="Meme Lucu">
+  <p>Kamu tiap hari makin lucuu, aku culik boleh gaa</p>
+  <button class="close-btn" onclick="nextPopup(1)">Next</button>
 </div>
 
 <!-- POPUP 2 -->
 <div class="popup" id="popup2">
-  <h2>💌 Pesan buat kamu</h2>
+  <h2>💌 Message for you</h2>
   <p>
 Utututuuu level up dayy nggaa, aku ga lalii kok, mungkinnn iki sedikitt agakk alay dikit tp gpp lh, yoo sepurane mungkin cuma ikii sg iso tak gawe tapi setidake aku effort lo yo iki...
 
 Umume ae cah TKJ ddi tk gaweo web coding an, yo mungkin aku gak iso ky cah cah ngonokuii sg ketoe penak nk petukan ngono, sebenere aku yo iso ae ky ngono toh yo aku ws eroh omahmu, tapi aku cahe drg iso ngonoki gk siap aku:(
   </p>
-  <button class="close-btn" onclick="nextPopup(2)">Lanjut</button>
+  <button class="close-btn" onclick="nextPopup(2)">Next</button>
 </div>
 
 <!-- POPUP 3 -->
 <div class="popup" id="popup3">
-  <h2>💖 Penutup</h2>
+  <h2>Close Page</h2>
   <p>
 Terimakasii untuk apapunn, gk usah ngeroso insecureee teruss yoo gk usah mikir aneh2 tentang aku nehh, awmu ki ws menang cah awmu ki gk olehh bersaing ambe siapapunn nk awmu mikir aku cahe gampang seneng bocahh iyo tak akoni tp bocah e yo awmu...
 
@@ -172,7 +172,7 @@ Wong awmu meneng ae aku yo ws kecintaan ikiii opo neh awmu polah, dadi aku ki sm
 
 Gawe kesehatanmu yo dijogo, Luv uu!!
   </p>
-  <button class="close-btn" onclick="closeAll()">Tutup</button>
+  <button class="close-btn" onclick="closeAll()">Finish</button>
 </div>
 
 <script>
